syntax = "proto3";

option go_package = "linkany/management/grpc/mgt";

// The greeting service definition.
service ManagementService {

  rpc Login(ManagementMessage) returns (ManagementMessage) {}

  rpc Get (ManagementMessage) returns (ManagementMessage) {}

  rpc List (ManagementMessage) returns (ManagementMessage) {}

  rpc Watch (stream ManagementMessage) returns (stream ManagementMessage) {}

  rpc Keepalive(stream ManagementMessage) returns (stream ManagementMessage) {}

  rpc Registry (ManagementMessage) returns (ManagementMessage) {}
}

// ControlMessage is dynamic message for kind to request and response
message ManagementMessage  {
  string pub_key = 1;
  bytes body = 2;
  int32 encrypt = 3;
  int32 version = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message Request {
  string pub_key = 1;
  string appId = 2;
  string token = 3;
}

message Peer {
  string publicKey = 1;
  string endpoint = 2;
  string address = 3;
  string allowedIps = 4;
  int32  persistentKeepalive = 5;
}

message NetworkMap {
  string username = 1;
  string pub_key = 2;
  string eventType = 3;
  repeated Peer peers = 4;
}

message WatchMessage {
  EventType type = 1;
  Peer peer = 2;
}

message RegistryRequest {
  int64 id = 1;
  int64 instance_id = 2;
  int64 user_id = 3;
  string name = 4;
  string hostname = 5;
  string app_id = 6;
  string ins_private_key = 7;
  string ins_public_key = 8;
  string address = 9;
  string endpoint = 10;
  int32 persistent_keepalive = 11;
  string public_key = 12;
  string private_key = 13;
  string allowed_ips = 14;
  string create_date = 15;
  string host_ip = 16;
  string srflx_ip = 17;
  string relay_ip = 18;
  uint64 tie_breaker = 19;
  string updated_at = 20;
  string deleted_at = 21;
  string created_at = 22;
  string ufrag = 23;
  string pwd = 24;
  int32 port = 25;
  string status = 26;
}
